<resources>
    <string name="app_name">MovieTEN</string>
    <string name="poster_of_movie">Poster of movie</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="add_to_favourite">Added to favourite</string>
    <string name="remove_from_favourite">Removed from favourite</string>
    <string name="item_main">Main</string>
    <string name="item_favourite">Favourite</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="movie_title">Title:</string>
    <string name="movie_original_title">Original title:</string>
    <string name="movie_rating">Rating:</string>
    <string name="movie_release_date">Release date:</string>
    <string name="movie_description">Description:</string>
    <string name="add_or_remove_from_favourite">Add or remove from favourite</string>
</resources>