<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewLabelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <View style="@style/BorderStyle"
        android:id="@+id/viewAfterTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        tools:ignore="MissingConstraints" />

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewLabelOriginalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_original_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewOriginalTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <View style="@style/BorderStyle"
        android:id="@+id/viewAfterOriginalTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewOriginalTitle"
        tools:ignore="MissingConstraints" />

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewLabelRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle" />

    <View style="@style/BorderStyle"
        android:id="@+id/viewAfterRating"
        app:layout_constraintTop_toBottomOf="@id/textViewRating"
        tools:ignore="MissingConstraints" />

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewLabelReleaseDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_release_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewReleaseDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating" />

    <View style="@style/BorderStyle"
        android:id="@+id/viewAfterReleaseDate"
        app:layout_constraintTop_toBottomOf="@id/textViewReleaseDate"
        tools:ignore="MissingConstraints" />

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewLabelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movie_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate" />

    <TextView style="@style/LabelStyle"
        android:id="@+id/textViewOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTrailers"
        android:nestedScrollingEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewOverview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewReviews"
        android:nestedScrollingEnabled="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>